fix(sonarqube): resolve 235 static analysis issues
S1186 (47x): add '// intentionally empty' to no-arg constructors in
  domain models, DTOs and JPA entities.
S1710 (39x): replace @APIResponses({}) wrapper with repeated
  @APIResponse annotations in all 13 resource classes.
S6126 (33x): replace String concatenation in test assertions with
  Java text blocks.
S2629 (16x): switch log statements from string concatenation to
  java.util.logging positional format {0}.
S1192 (13x): extract duplicated string literals to private static
  final constants (ERROR_INESPERADO, ADMIN_ONLY, etc.).
S6204 (10x): replace Stream.collect(Collectors.toList()) with
  Stream.toList() in 8 repository implementations.
S8694 (10x): use java.time.Month enum constants instead of int
  literals in 3 test files.
S8688 (10x): pass ZoneOffset.UTC to LocalDateTime/LocalDate.now()
  in repositories and UserResource.
S1128 (6x): remove unused imports in 6 use case / test files.
S6201 (6x): apply instanceof pattern matching in RouteRepositoryImpl.
S112 (5x): replace RuntimeException with IllegalStateException in
  5 user management use cases.
javasecurity:S5145 (3x): remove user-controlled data from log
  statements in Fuel/Energy/ROI use cases.
S6813 (18x): convert @Inject field injection to constructor injection
  in 13 repository implementations, FirebaseAuthFilter,
  FirebaseConfig and UploadResource.
S3776 (1x): extract requiresRoleAuth() and isPublicReadOnly() helpers
  in FirebaseAuthFilter to bring cognitive complexity to 15.