@@ -16,13 +16,16 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @ApplicationScoped
 public class TripRepositoryImpl implements TripRepository {
 
+    private final EntityManager entityManager;
+
     @Inject
-    EntityManager entityManager;
+    public TripRepositoryImpl(EntityManager entityManager) {
+        this.entityManager = entityManager;
+    }
 
     @Override
     public List<Trip> findAll() {
@@ -31,7 +34,7 @@ public class TripRepositoryImpl implements TripRepository {
                 .getResultList()
                 .stream()
                 .map(TripMapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static final String TRIPS_COUNT_BY_ROUTE_AND_DAY_QUERY =
